Started writing the results section

--- a/paper/report/tex/chapter-results.tex
+++ b/paper/report/tex/chapter-results.tex
@@ -1,8 +1,9 @@
 \chapter{Results}
 \label{chap:results}
-The design results are presented in this seciton.
+The design results are presented in this seciton.  The design was compiled using Synopsys Design Compiler with the Artisan 45nm typical libraries.  The power and area measurements are taken from Design Compiler's built-in area and power reports generators.   
 
-
-\input{tex/chapter-results/section-power}
 \input{tex/chapter-results/section-area}
+\input{tex/chapter-results/section-power}
+
+
 
