updated counting method, npfs faults and modifications to base design

--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -57,7 +57,7 @@
 
 \address{1402 Juliet St.\\ Austin, TX 78704}  % Required
 
-\title{A Programmable Memory BIST}
+\title{A Programmable MBIST with Address and NPSF Pattern Generators}
                                                     % Required
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -343,6 +343,7 @@ Abstract text goes here...
 % dissertation).
 %
 %\include{tikzshapes}
+\graphicspath{{./img/}}
 \include{tex/chapter-introduction}
 \include{tex/chapter-background}
 \include{tex/chapter-design}
