--- a/paper/report/diss.bib
+++ b/paper/report/diss.bib
@@ -356,4 +356,17 @@ keywords={Coupling;fault models;memories;test complexity;testing algorithm;Async
 doi={10.1109/TC.1978.1675150}, 
 ISSN={0018-9340},}
 
+@ARTICLE{1675556, 
+author={Hayes, J.P.}, 
+journal={Computers, IEEE Transactions on}, 
+title={Testing Memories for Single-Cell Pattern-Sensitive Faults}, 
+year={1980}, 
+volume={C-29}, 
+number={3}, 
+pages={249-254}, 
+abstract={The design of minimum-length test sequences for pattern sensitivity in random-access memory (RAM) arrays is examined. The single pattern-sensitive fault (SPSF) model is used in which operations addressed to at most one memory cell are allowed to be faulty at any time. The influence of an SPSF affecting cell Ci is restricted to a fixed set of cells called the neighborhood of Ci. A new method is presented for efficiently generating the sequence of writes required in an SPSF test. This method yields optimal sequences for a useful class of neighborhoods called tiling neighborhoods. It is observed that RAM neighborhoods can be interpreted as polyominoes. A general procedure is given for constructing an SPSF test containing the minimum number of writes but a nonminimum number of reads. The difficult problem of minimizing the number of reads in an SPSF test is investigated for the 2-cell memory M2. A test of length 36 for M2 is derived which is optimal under certain reasonable restrictions. It is demonstrated that minimum-length SPSF tests can be inherently asymmetric.}, 
+keywords={Fault detection;memory testing;pattern sensitivity;polyominoes;single pattern-sensitive faults;test generation;Circuit faults;Circuit testing;Fault detection;Fault diagnosis;Integrated circuit testing;Interference;Random access memory;Read-write memory;Test pattern generators;Fault detection;memory testing;pattern sensitivity;polyominoes;single pattern-sensitive faults;test generation}, 
+doi={10.1109/TC.1980.1675556}, 
+ISSN={0018-9340},}
+
 \end{thebibliography}
