added type-1 type-2 neighborhood images to NPSF faults section

--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -42,6 +42,8 @@
 \usepackage{chngpage}
 \usepackage{tabularx}
 \usepackage{fixltx2e}
+\usepackage{caption}
+\usepackage{subcaption}
 %\usepackage{draftcopy}		% Uncomment this line to have the
 				% word, "DRAFT," as a background
 				% "watermark" on all of the pages of
