Finished the area results section

--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -55,6 +55,8 @@
 
 %\usetikzlibrary{circuits}
 %\usetikzlibrary{shapes,arrows}
+\usepackage{pgfplots}
+
 \author{William Hugh O'Donnell}  	% Required
 
 \address{1402 Juliet St.\\ Austin, TX 78704}  % Required
