--- a/paper/report/tex/chapter-conclusion.tex
+++ b/paper/report/tex/chapter-conclusion.tex
@@ -1,9 +1,9 @@
 \chapter{Conclusion}
 \label{chap:conclusion}
-To meet current and future application requirements, SoCs must integrate memory.  They have done so to the point where over 90\% of the footprint is allocated to memory.  Because of the aggressive memory density and DPM level, the overall SoC yield is strongly dependent on the health of the memory.  
+To meet current and future application requirements, SoCs must integrate memory.  Designers have integrated to the point where over 90\% of the footprint is allocated to memory.  Because of the aggressive memory density and DPM level, the overall SoC yield is strongly dependent on the health of the memory.  
 
 Traditional circuit faults such as stuck-at and coupling must still be detected to maintain an acceptable yield.  A variety of memory test algorithms are implemented to screen for these faults with the March Test becoming the most popular due to its mathematical backing and fast test time.  But because of the size, speed and complexity of today’s chips, running these tests through external memory testers is no longer a viable option and MBISTs have become the only practical solution for fault coverage.  
 
-Area, power and high-speed testing are some of the challenges that have been encountered during the design of MBISTs with area and power being the two that seem of most concern.  Two different topologies, FSM-based and microcode-based BIST, provide the infrastructure for MBIST design while current research focuses on solving area, power and speed issues.  Because embedded memories have become a critical factor in SoC yield, MBISTs are assured to play a crucial role in the future of SoCs.
+This report shows that a programmable MBIST can achieve flexibilty offered by external testers while also maintaining a low area overhead within the memory block.  An address generator, which offers gray coding, 2\textsuperscript{\textit{i}}, and address complement counting methods, combined with an NPSF Type-1 neighborhood background pattern generator can be integrated with only an additional 5.2\% area for memories 8KB memories - and the area overhead is further reduced as memories increase in size.  This design will provide designers flexibility to adapt to new memory test models on the manufacturing line without sacrificing very much area.  
 
 \input{tex/chapter-conclusion/section-future}
