Updated abstract and acknowledgement

--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -311,6 +311,7 @@ I would like to thank my supervisor Professor Nur Touba for all of his advice an
 
 This work would not have been possible without all the love and support I received from my family: my parents John and Lolita O'Donnell, my in-laws Peter and Belvia Ortega, my siblings Rosemary and John.  Their support has carried me through graduate school. I cannot thank each of these people enough.  
 
+Finally, I would like to thank my classmates, especially Robert, Anil and Miguel, for their support, comraderie and knowledge.  Without them working late nights and long weekends with me on our various assignments, labs and projects, I would not be where I am today.  
 \end{acknowledgments}
 
 
@@ -320,7 +321,7 @@ This work would not have been possible without all the love and support I receiv
 % Do NOT use \begin{abstract} ... \end{abstract}.
 %
 \utabstract
-Abstract text goes here...
+The movement to smart mobile connected devices which consolidate functions of traditionally separate devices is driving innovation in System-on-chips (SoCs).  One of the innovations helping to meet the current needs of SoCs is the integration of larger memory with the processor, and with this, comes the challenge of testing all the memory cells.  The programmable memory BIST offers a flexible approach to designers and testers because it allows the memory test algorithms to be updated when new memory fault models are discovered.  But this flexibility comes at a tradeoff to area as the BIST circuitry needs to be intergrated next to the memory array.  This report proposed some improvements to an existing design that will improve flexibility by enhancing the address generation schemes while simultaneously eliminating the need for an auxiliary memory in cases where a Type-1 NPSF background will be used.  The areas of the base design is compared to the proposed design to show the address and data generation improvements can be achieved with only 1.8\% increase in area with an 8KB memory.
 
 \index{Abstract}%
 \indent
