formatting: fixed previous degree; removed blank page before TOC

--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -107,7 +107,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\previousdegrees{B.S.C.E.}
+\previousdegrees{B.S.E.E.}
      % The abbreviated form of your previous degree(s).
      % E.g., \previousdegrees{B.S., MBA}.
      %
@@ -322,7 +322,6 @@ Finally, I would like to thank my classmates, especially Robert, Anil and Miguel
 %
 \utabstract
 The movement to smart mobile connected devices which consolidate functions of traditionally separate devices is driving innovation in System-on-chips (SoCs).  One of the innovations helping to meet the current needs of SoCs is the integration of larger memory with the processor, and with this, comes the challenge of testing all the memory cells.  The programmable memory BIST offers a flexible approach to designers and testers because it allows the memory test algorithms to be updated when new memory fault models are discovered.  But this flexibility comes at a tradeoff to area as the BIST circuitry needs to be intergrated next to the memory array.  This report proposed some improvements to an existing design that will improve flexibility by enhancing the address generation schemes while simultaneously eliminating the need for an auxiliary memory in cases where a Type-1 NPSF background will be used.  The areas of the base design is compared to the proposed design to show the address and data generation improvements can be achieved with only 1.8\% increase in area with an 8KB memory.
-
 \index{Abstract}%
 \indent
 
