--- a/paper/report/tex/chapter-design.tex
+++ b/paper/report/tex/chapter-design.tex
@@ -1,7 +1,7 @@
 \chapter{Proposed Design}
 \label{chap:design}
 
-The design in this report is based upon \cite{1584083} which proposes a programmable memory BIST with auxillary memory for NPSF.  This design will modify the programmable memory BIST by introducing a pattern generator to dynamically generate the NPSF Type-1 neighborhood patterns.  It will also replace the address counter with a programmable address generator to allow more flexibility in testing specific addresses sequences.
+The design in this report is based upon \cite{1584083} which proposes a programmable memory BIST with auxiliary memory for NPSF.  This design will modify the programmable memory BIST by introducing a pattern generator to dynamically generate the NPSF Type-1 neighborhood patterns.  It will also replace the address counter with a programmable address generator to allow more flexibility in testing specific addresses sequences.
 
 \input{tex/chapter-design/section-blocks}
 \input{tex/chapter-design/section-modifications}
