--- a/paper/report/tex/chapter-introduction.tex
+++ b/paper/report/tex/chapter-introduction.tex
@@ -7,11 +7,11 @@ A built-in self-test (BIST) has previously been used to test logical elements of
 
 As not all fault models can always be predicted for a new product, programmable MBIST (PMBIST) designs allow developers to address fault detection, create efficient algorithms, and overcome challenges presented by new technology.  Conversely, a non-programmable MBIST requires the designer to correctly predict the fault models to be tested, but changes to the design or mask typically requires another tape-out and can be quite expensive.  Because of this, the programmable MBIST has gained popularity amongst memory designers. 
 
-The most common memory test today is the March test because its structured and repetive algorithms can be applied very easily to the symmetric nature of memory cells \cite{1675150}.  The design presented in \cite{1584083} primarily uses the March test to verify the integrity of the memory.  In general, there are three components of memory tests: the test algorithm or operations in each cell; the data; and the memory address sequence \cite{5993815}.  
+The most common memory test today is the March test because its structured and repetitive algorithms can be applied very easily to the symmetric nature of memory cells \cite{1675150}.  The design presented in \cite{1584083} primarily uses the March test to verify the integrity of the memory.  In general, there are three components of memory tests: the test algorithm or operations in each cell; the data; and the memory address sequence \cite{5993815}.  
 
-The PMBIST design presented in \cite{1584083} will be used as the base design and is intended to provide an area efficient design with good flexibilty on algorithm and test data programming.  This report proposes improvements to the design by providing programmability to the address order and counting method. The previous design uses a linear counter and psuedo-random counter to sequence through memory addresses.  This allows the BIST to run March algorithms, but another algorithm, Moving Inversion (MOVI) cannot be run because it requires 2\textsuperscript{i} address counting method.   MOVI is popular industry for its ability to detect read and write disturbance while also allowing for determination of the best and worst case memory access times \cite{VanDeGoor1991}.  This project adds the 2\textsuperscript{i} counting method along with Gray coding and Address Compliment to integrate common industry test addressing sequences into the BIST. 
+The PMBIST design presented in \cite{1584083} will be used as the base design and is intended to provide an area efficient design with good flexibility on algorithm and test data programming.  This report proposes improvements to the design by providing programmability to the address order and counting method. The previous design uses a linear counter and pseudo-random counter to sequence through memory addresses.  This allows the BIST to run March algorithms, but another algorithm, Moving Inversion (MOVI) cannot be run because it requires 2\textsuperscript{i} address counting method.   MOVI is popular industry for its ability to detect read and write disturbance while also allowing for determination of the best and worst case memory access times \cite{VanDeGoor1991}.  This project adds the 2\textsuperscript{i} counting method along with Gray coding and Address Compliment to integrate common industry test addressing sequences into the BIST. 
 
-In addition, this paper will show a reduction of area can be achieved by introducing a dynamic pattern generation block to replace the auxillary memory used to store neighborhood pattern-sensitve fault (NPSF) backgrounds.  In the base design, the data pattern for auxiliary memory can initialized through a scan mechanism \cite{748806}, but relying solely on scan to load data patterns can be time consuming for serial BIST schemes.  Additionally, the MOVI fault model requires an NPSF data backgroud of Type 1 to be effective.  Because of this, this report integrates an NPSF data background generator to remove the scan delay.  This provides faster access time and potentially removes the need for an auxiliary memory thus speeding up test time and saving area.  In achieving these design goals, this report will show enhancements to the \cite{1584083} design in two of the three memory test components.
+In addition, this paper will show a reduction of area can be achieved by introducing a dynamic pattern generation block to replace the auxiliary memory used to store neighborhood pattern-sensitive fault (NPSF) backgrounds.  In the base design, the data pattern for auxiliary memory can initialized through a scan mechanism \cite{748806}, but relying solely on scan to load data patterns can be time consuming for serial BIST schemes.  Additionally, the MOVI fault model requires an NPSF data background of Type 1 to be effective.  Because of this, this report integrates an NPSF data background generator to remove the scan delay.  This provides faster access time and potentially removes the need for an auxiliary memory thus speeding up test time and saving area.  In achieving these design goals, this report will show enhancements to the \cite{1584083} design in two of the three memory test components.
 
 This paper is divided into five chapters.
 Chapter 1 offers motivation for this project and supplies definitions for common terminology.  Chapter 2 provides background information on the memory faults, current memory testing algorithms and designs to address some of the challenges of memory testing.  Chapter 3 presents details of the design proposed in this report and chapter 4 follows with testing results and comparisons to other designs.
