--- a/paper/report/tex/chapter-results.tex
+++ b/paper/report/tex/chapter-results.tex
@@ -1,6 +1,6 @@
 \chapter{Results}
 \label{chap:results}
-The design results are presented in this section.  The design was compiled using Synopsys Design Compiler with the Artisan 45nm typical libraries.  The area measurements are taken from Design Compiler's built-in area report generator.  The memory size information is obtained for Artisan Memory Compiler tools using the 180nm library.  To show a more accurate comparison, the area from the Memory Compiler tool has been scaled to a more comparable size.  This does not affect the analysis as the memory area is only used as a value to reference the orignal BIST and proposed BIST designs.  
+The design results are presented in this section.  The design was compiled using Synopsys Design Compiler with the Artisan 45nm typical libraries.  The area measurements are taken from Design Compiler's built-in area report generator.  The memory size information is obtained for Artisan Memory Compiler tools using the 180nm library.  To show a more accurate comparison, the area from the Memory Compiler tool has been scaled to a more comparable size.  This does not affect the analysis as the memory area is only used as a value to reference the original BIST and proposed BIST designs.  
 
 \input{tex/chapter-results/section-area}
 
