--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -321,7 +321,7 @@ Finally, I would like to thank my classmates, especially Robert, Anil and Miguel
 % Do NOT use \begin{abstract} ... \end{abstract}.
 %
 \utabstract
-The movement to smart mobile connected devices which consolidate functions of traditionally separate devices is driving innovation in System-on-chips (SoCs).  One of the innovations helping to meet the current needs of SoCs is the integration of larger memory with the processor, and with this, comes the challenge of testing all the memory cells.  The programmable memory BIST offers a flexible approach to designers and testers because it allows the memory test algorithms to be updated when new memory fault models are discovered.  But this flexibility comes at a trade-off to area as the BIST circuitry needs to be integrated next to the memory array.  This report proposed some improvements to an existing design that will improve flexibility by enhancing the address generation schemes while simultaneously eliminating the need for an auxiliary memory in cases where a Type-1 NPSF background will be used.  The areas of the base design is compared to the proposed design to show the address and data generation improvements can be achieved with only 1.8\% increase in area with an 8KB memory.
+The movement to smart mobile connected devices which consolidate functions of traditionally separate devices is driving innovation in System-on-chips (SoCs).  One of the innovations helping to meet the current needs of SoCs is the integration of larger memory with the processor, and with this, comes the challenge of testing all the memory cells.  The programmable memory BIST offers a flexible approach to designers and testers because it allows the memory test algorithms to be updated when new memory fault models are discovered.  But this flexibility comes as a trade-off to area as the BIST circuitry needs to be integrated next to the memory array.  This report proposes enhancements to an existing design that will improve flexibility by enhancing the address generation schemes while simultaneously eliminating the need for an auxiliary memory in cases where a Type-1 NPSF background will be used.  A comparison of the base design to the proposed design shows the address and data generation improvements can be achieved with only 1.8\% increase in area with an 8KB memory.
 \index{Abstract}%
 \indent
 
