--- a/paper/report/diss.bib
+++ b/paper/report/diss.bib
@@ -317,7 +317,7 @@ abstract={The design and architectures of a microcode-based memory BIST and prog
 keywords={built-in self test;finite state machines;integrated circuit testing;integrated memory circuits;memory architecture;programmable circuits;FSM-based memory;built-in self test architectures;extendibility;flexibility;microcode-based memory BIST;programmable memory;test logic overhead;Automatic testing;Built-in self-test;Circuit faults;Computer architecture;Costs;Fabrication;Hardware;Logic arrays;Logic testing;Memory architecture}, 
 doi={10.1109/DATE.1999.761207},}
 
-TICLE{748806, 
+@ARTICLE{748806, 
 author={Chih-Tsun Huang and Jing-Reng Huang and Chi-Feng Wu and Cheng-Wen Wu and Tsin-Yuan Chang}, 
 journal={Design Test of Computers, IEEE}, 
 title={A programmable BIST core for embedded DRAM}, 
@@ -325,7 +325,7 @@ year={1999},
 volume={16}, 
 number={1}, 
 pages={59-70}, 
-abstract={The programmable BIST design presented here supports various test modes using a simple controller. With the March C algorithm, the BIST circuit's overhead is under 1.3% for a 1-Mbit DRAM and under 0.3% for a 16-Mbit DRAM. The BIST design presented for embedded DRAM supports built-in self-diagnosis by feeding error information to the external tester. Moreover, using a specific test sequence, it can test for critical timing faults, reducing tester time for ac parametric test. The design supports wafer test, pre-burn-in test, burn-in, and final test. It is field-programmable; the user can program test algorithms using predetermined test elements (such as march elements, surround test elements, and refresh modes). The user can optimize the hardware for a specific embedded DRAM with a set of predetermined test elements. Our design is different from the microprogram-controlled BIST described by J. Dreibelbis et al. (1998) which has greater flexibility but higher overhead. Because our design begins at the register-transfer language level, test element insertion (for higher test coverage) and deletion (for lower hardware overhead are relatively easy}, 
+abstract={The programmable BIST design presented here supports various test modes using a simple controller. With the March C algorithm, the BIST circuit's overhead is under 1.3 percent for a 1-Mbit DRAM and under 0.3 percent for a 16-Mbit DRAM. The BIST design presented for embedded DRAM supports built-in self-diagnosis by feeding error information to the external tester. Moreover, using a specific test sequence, it can test for critical timing faults, reducing tester time for ac parametric test. The design supports wafer test, pre-burn-in test, burn-in, and final test. It is field-programmable; the user can program test algorithms using predetermined test elements (such as march elements, surround test elements, and refresh modes). The user can optimize the hardware for a specific embedded DRAM with a set of predetermined test elements. Our design is different from the microprogram-controlled BIST described by J. Dreibelbis et al. (1998) which has greater flexibility but higher overhead. Because our design begins at the register-transfer language level, test element insertion (for higher test coverage) and deletion (for lower hardware overhead are relatively easy}, 
 keywords={DRAM chips;built-in self test;embedded systems;programmable circuits;March C algorithm;built-in self-diagnosis;critical timing faults;embedded DRAM;error information;external tester;field-programmable;march elements;microprogram-controlled BIST;pre-burn-in test;predetermined test elements;programmable BIST core;programmable BIST design;register-transfer language level;test element insertion;test modes;test sequence;wafer test;Automatic testing;Built-in self-test;Circuit faults;Circuit testing;Decoding;Hardware;Logic testing;Random access memory;Read-write memory;Redundancy}, 
 doi={10.1109/54.748806}, 
 ISSN={0740-7475},}
