--- a/paper/report/diss.bib
+++ b/paper/report/diss.bib
@@ -325,7 +325,6 @@ year={1999},
 volume={16}, 
 number={1}, 
 pages={59-70}, 
-abstract={The programmable BIST design presented here supports various test modes using a simple controller. With the March C algorithm, the BIST circuit's overhead is under 1.3 percent for a 1-Mbit DRAM and under 0.3 percent for a 16-Mbit DRAM. The BIST design presented for embedded DRAM supports built-in self-diagnosis by feeding error information to the external tester. Moreover, using a specific test sequence, it can test for critical timing faults, reducing tester time for ac parametric test. The design supports wafer test, pre-burn-in test, burn-in, and final test. It is field-programmable; the user can program test algorithms using predetermined test elements (such as march elements, surround test elements, and refresh modes). The user can optimize the hardware for a specific embedded DRAM with a set of predetermined test elements. Our design is different from the microprogram-controlled BIST described by J. Dreibelbis et al. (1998) which has greater flexibility but higher overhead. Because our design begins at the register-transfer language level, test element insertion (for higher test coverage) and deletion (for lower hardware overhead are relatively easy}, 
 keywords={DRAM chips;built-in self test;embedded systems;programmable circuits;March C algorithm;built-in self-diagnosis;critical timing faults;embedded DRAM;error information;external tester;field-programmable;march elements;microprogram-controlled BIST;pre-burn-in test;predetermined test elements;programmable BIST core;programmable BIST design;register-transfer language level;test element insertion;test modes;test sequence;wafer test;Automatic testing;Built-in self-test;Circuit faults;Circuit testing;Decoding;Hardware;Logic testing;Random access memory;Read-write memory;Redundancy}, 
 doi={10.1109/54.748806}, 
 ISSN={0740-7475},}
@@ -367,6 +366,30 @@ pages={249-254},
 abstract={The design of minimum-length test sequences for pattern sensitivity in random-access memory (RAM) arrays is examined. The single pattern-sensitive fault (SPSF) model is used in which operations addressed to at most one memory cell are allowed to be faulty at any time. The influence of an SPSF affecting cell Ci is restricted to a fixed set of cells called the neighborhood of Ci. A new method is presented for efficiently generating the sequence of writes required in an SPSF test. This method yields optimal sequences for a useful class of neighborhoods called tiling neighborhoods. It is observed that RAM neighborhoods can be interpreted as polyominoes. A general procedure is given for constructing an SPSF test containing the minimum number of writes but a nonminimum number of reads. The difficult problem of minimizing the number of reads in an SPSF test is investigated for the 2-cell memory M2. A test of length 36 for M2 is derived which is optimal under certain reasonable restrictions. It is demonstrated that minimum-length SPSF tests can be inherently asymmetric.}, 
 keywords={Fault detection;memory testing;pattern sensitivity;polyominoes;single pattern-sensitive faults;test generation;Circuit faults;Circuit testing;Fault detection;Fault diagnosis;Integrated circuit testing;Interference;Random access memory;Read-write memory;Test pattern generators;Fault detection;memory testing;pattern sensitivity;polyominoes;single pattern-sensitive faults;test generation}, 
 doi={10.1109/TC.1980.1675556}, 
+ISSN={0018-9340},}
+
+@ARTICLE{1675601, 
+author={Suk, D.S. and Reddy, S.M.}, 
+journal={Computers, IEEE Transactions on}, 
+title={Test Procedures for a Class of Pattern-Sensitive Faults in Semiconductor Random-Access Memories}, 
+year={1980}, 
+volume={C-29}, 
+number={6}, 
+pages={419-429}, 
+keywords={Pattern-sensitive faults;semiconductor random- access memories;Cities and towns;Design methodology;Fault detection;Fault diagnosis;Random access memory;Read-write memory;Semiconductor device testing;Semiconductor memory;Pattern-sensitive faults;semiconductor random- access memories}, 
+doi={10.1109/TC.1980.1675601}, 
+ISSN={0018-9340},}
+
+@ARTICLE{1676572, 
+author={Saluja, K.K. and Kinoshita, K.}, 
+journal={Computers, IEEE Transactions on}, 
+title={Test Pattern Generation for API Faults in RAM}, 
+year={1985}, 
+volume={C-34}, 
+number={3}, 
+pages={284-287}, 
+keywords={Built-in testing;fault detection;pattern-sensitive faults;random-access memory;static pattern-sensitive faults;Application software;Art;Australia;Fault detection;Hardware;Logic;Random access memory;Read-write memory;Test pattern generators;Testing;Built-in testing;fault detection;pattern-sensitive faults;random-access memory;static pattern-sensitive faults}, 
+doi={10.1109/TC.1985.1676572}, 
 ISSN={0018-9340},}
 
 \end{thebibliography}
