--- a/paper/report/who_mastersreport.tex
+++ b/paper/report/who_mastersreport.tex
@@ -44,6 +44,7 @@
 \usepackage{fixltx2e}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{pifont}
 %\usepackage{draftcopy}		% Uncomment this line to have the
 				% word, "DRAFT," as a background
 				% "watermark" on all of the pages of
