Added edits to background sections challenges and designs; formatted March elements

--- a/paper/report/diss.bib
+++ b/paper/report/diss.bib
@@ -8,6 +8,16 @@ pages={10 pp.-1164},
 keywords={built-in self test;digital storage;embedded systems;system-on-chip;SoC embedded memories;programmable BIST approach;programmable memory BIST;test algorithms;Algorithm design and analysis;Built-in self-test;Circuit faults;Circuit testing;Costs;Fabrication;Inspection;Memory architecture;Process design;Read-write memory}, 
 doi={10.1109/TEST.2005.1584083},}
 
+@ARTICLE{NovelBist,
+author={Balasubrahamanyam, Y. and Chowdary, G. and Subrahmanyam, T.},
+journal={International Journal of Computer Technology and Applications},
+title={A Novel Low Power Pattern Generation Technique for Concurrent Bist Architecture},
+year={2012},
+volume={3},
+number={2},
+pages={561-565},
+ISSN={2229-6093},}
+
 @Book{VanDeGoor1991,
 author = {A.J.van de Goor},
 title = {Testing Semiconductor Memories: Theory and Practice},
@@ -325,7 +335,6 @@ year={1999},
 volume={16}, 
 number={1}, 
 pages={59-70}, 
-keywords={DRAM chips;built-in self test;embedded systems;programmable circuits;March C algorithm;built-in self-diagnosis;critical timing faults;embedded DRAM;error information;external tester;field-programmable;march elements;microprogram-controlled BIST;pre-burn-in test;predetermined test elements;programmable BIST core;programmable BIST design;register-transfer language level;test element insertion;test modes;test sequence;wafer test;Automatic testing;Built-in self-test;Circuit faults;Circuit testing;Decoding;Hardware;Logic testing;Random access memory;Read-write memory;Redundancy}, 
 doi={10.1109/54.748806}, 
 ISSN={0740-7475},}
 
