fixed 957583 reference error

--- a/paper/report/diss.bib
+++ b/paper/report/diss.bib
@@ -401,4 +401,14 @@ keywords={Built-in testing;fault detection;pattern-sensitive faults;random-acces
 doi={10.1109/TC.1985.1676572}, 
 ISSN={0018-9340},}
 
+@INPROCEEDINGS{957583, 
+author={Chrisarithopoulos, A. and Haniotakis, T. and Tsiatouhas, Y. and Arapoyanni, A.}, 
+booktitle={Electronics, Circuits and Systems, 2001. ICECS 2001. The 8th IEEE International Conference on}, 
+title={New test pattern generation units for NPSF oriented memory built-in self test}, 
+year={2001}, 
+volume={2}, 
+pages={749-752 vol.2}, 
+keywords={automatic test pattern generation;built-in self test;fault location;integrated circuit testing;integrated memory circuits;logic testing;BIST;Eulerian sequence;NPSF oriented memory built-in self test;TPG units;built-in self-test;deterministic test pattern generation units;memory neighborhood pattern sensitive fault testing;memory type-I NPSF testing;test pattern generation units;test patterns;Automatic testing;Built-in self-test;Circuit faults;Circuit testing;Design engineering;Informatics;Life estimation;Silicon;System testing;Test pattern generators}, 
+doi={10.1109/ICECS.2001.957583},}
+
 \end{thebibliography}
